--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,7 @@
 ---
 galaxy_info:
+  role_name: "ovirt_exporter"
+  namespace: "none"
   author: "Konstantin Shalygin <k0ste@k0ste.ru>"
   issue_tracker_url: "https://github.com/k0ste/ansible-role-ovirt_exporter"
   description: "Deploy Prometheus ovirt_exporter"
@@ -7,9 +9,9 @@ galaxy_info:
   license: "GPL"
   min_ansible_version: "3.0.0"
   platforms:
-    - name: GenericUNIX
+    - name: "Ubuntu"
       versions:
-  categories:
-    - system
-    - cloud
+        - 'all'
+  galaxy_tags:
+    - 'cloud'
 dependencies: []
