Added run_once for github query

--- a/tasks/pre_requisite.yml
+++ b/tasks/pre_requisite.yml
@@ -16,6 +16,7 @@
     user: "czerwonk"
     repo: "ovirt_exporter"
     action: "latest_release"
+  run_once: "true"
   register: "ovirt_exporter_version_tag"
   delegate_to: "localhost"
   when:
