Refactor for packages support

--- a/tasks/download.yml
+++ b/tasks/download.yml
@@ -1,12 +1,36 @@
 ---
+- name: "ovirt_exporter | Include packages tasks [for deps]"
+  ansible.builtin.import_tasks:
+    file: "packages.yml"
+  vars:
+    ovirt_exporter_pacakges_variant:
+      "{{ hostvars[inventory_hostname]['ovirt_exporter_packages_deps'] }}"
 - name: "ovirt_exporter | Download & unarchive exporter binary from tarball"
   ansible.builtin.unarchive:
-    src: "{{ vars['ovirt_exporter_url'] + '/' + vars['ovirt_exporter_version'] +
-      '/ovirt_exporter_' + vars['ovirt_exporter_version'] + '_' +
-      vars['ovirt_exporter_arch'] + '.tar.gz' }}"
-    dest: "{{ vars['ovirt_exporter_dest'] }}"
+    src: "{{ vars['ovirt_exporter_url'] + '/v' +
+      vars['ovirt_exporter_version'] + '/ovirt_exporter-' +
+      vars['ovirt_exporter_version'] + '.' + vars['ovirt_exporter_arch'] +
+      '.tar.gz' }}"
+    dest: "{{ hostvars[inventory_hostname]['ovirt_exporter_dest'] }}"
     remote_src: "yes"
-    include: "ovirt_exporter"
+    include: "{{ 'ovirt_exporter-' + vars['ovirt_exporter_version'] +
+      '.' + vars['ovirt_exporter_arch'] + '/ovirt_exporter' }}"
     mode: "0775"
     owner: "root"
     group: "root"
+- name: "ovirt_exporter | Move exporter binary arfter unarchive"
+  ansible.builtin.command:
+    cmd: "{{ 'mv ' + hostvars[inventory_hostname]['ovirt_exporter_dest'] +
+      '/ovirt_exporter-' + vars['ovirt_exporter_version'] + '.' +
+      vars['ovirt_exporter_arch'] + '/ovirt_exporter ' +
+      hostvars[inventory_hostname]['ovirt_exporter_dest'] + '/' }}"
+    removes: "{{ hostvars[inventory_hostname]['ovirt_exporter_dest'] +
+      '/ovirt_exporter-' + vars['ovirt_exporter_version'] + '.' +
+      vars['ovirt_exporter_arch'] + '/ovirt_exporter' }}"
+- name: "ovirt_exporter | Deleting unnecessary directory"
+  ansible.builtin.file:
+    path: "{{ hostvars[inventory_hostname]['ovirt_exporter_dest'] +
+      '/ovirt_exporter-' + vars['ovirt_exporter_version'] + '.' +
+      vars['ovirt_exporter_arch'] }}"
+    state: "absent"
+  diff: false
