--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,12 +1,39 @@
 ---
-- ansible.builtin.import_tasks:
+- name: "ovirt_exporter | Include pre requisite tasks"
+  ansible.builtin.import_tasks:
     file: "pre_requisite.yml"
-- ansible.builtin.import_tasks:
+- name: "ovirt_exporter | Include packages tasks [package deployment]"
+  ansible.builtin.include_tasks:
     file: "packages.yml"
-- ansible.builtin.import_tasks:
-    file: "download.yml"
-- ansible.builtin.include_tasks:
-    file: "deploy_ovirt_exporter.yml"
   when:
-    - "vars['ovirt_exporter_settings'] is defined"
-    - "vars['ovirt_exporter_settings'] != ''"
+    - "hostvars[inventory_hostname]['ovirt_exporter'] is defined"
+    - "hostvars[inventory_hostname]['ovirt_exporter'] != ''"
+    - "hostvars[inventory_hostname]['ovirt_exporter'] |
+       community.general.json_query(vars['ovirt_exporter_install_package'])
+       is defined"
+    - "hostvars[inventory_hostname]['ovirt_exporter'] |
+       community.general.json_query(vars['ovirt_exporter_install_package'])
+       == 'true'"
+  vars:
+    ovirt_exporter_install_package: "[] |
+      map(&install_package || 'false', @) | [0]"
+    ovirt_exporter_pacakges_variant:
+      "{{ hostvars[inventory_hostname]['ovirt_exporter_package'] }}"
+- name: "ovirt_exporter | Include packages tasks [not package deployment]"
+  ansible.builtin.include_tasks:
+    file: "download.yml"
+  when:
+    - "hostvars[inventory_hostname]['ovirt_exporter'] is defined"
+    - "hostvars[inventory_hostname]['ovirt_exporter'] != ''"
+    - "hostvars[inventory_hostname]['ovirt_exporter'] |
+       community.general.json_query(vars['ovirt_exporter_install_package'])
+       is defined"
+    - "hostvars[inventory_hostname]['ovirt_exporter'] |
+       community.general.json_query(vars['ovirt_exporter_install_package'])
+       == 'false'"
+  vars:
+    ovirt_exporter_install_package: "[] |
+      map(&install_package || 'false', @) | [0]"
+- name: "ovirt_exporter | Include deployment tasks"
+  ansible.builtin.import_tasks:
+    file: "deploy.yml"
