--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -1,33 +1,24 @@
 ---
-- name: "ovirt_exporter | Install the required packages in Redhat derivatives"
+- name: "ovirt_exporter | Install the required packages in Redhat
+    derivatives"
+  ansible.builtin.dnf:
+    name: "{{ ovirt_exporter_pacakges_variant }}"
+    state: "{{ vars['ovirt_exporter_package_state'] | default(omit) }}"
+    update_cache: "yes"
   when:
     - "hostvars[inventory_hostname]['ansible_os_family'] == 'RedHat'"
-  block:
-    - name: "ovirt_exporter | Install the required packages for RedHat via yum"
-      ansible.builtin.yum:
-        name: "{{ hostvars[inventory_hostname]['ovirt_exporter_package'] }}"
-        state:
-          "{{ vars['ovirt_exporter_package_state'] | default(omit) }}"
-        update_cache: "yes"
-      when:
-        - "hostvars[inventory_hostname]['ansible_pkg_mgr'] == 'yum'"
-    - name: "ovirt_exporter | Install the required packages for RedHat via dnf"
-      ansible.builtin.dnf:
-        name: "{{ hostvars[inventory_hostname]['ovirt_exporter_package'] }}"
-        state: "{{ vars['ovirt_exporter_package_state'] | default(omit) }}"
-        update_cache: "yes"
-      when:
-        - "hostvars[inventory_hostname]['ansible_pkg_mgr'] == 'dnf'"
-- name: "ovirt_exporter | Install the required packages in Debian derivatives"
+- name: "ovirt_exporter | Install the required packages in Debian
+    derivatives"
   ansible.builtin.apt:
-    name: "{{ hostvars[inventory_hostname]['ovirt_exporter_package'] }}"
+    name: "{{ ovirt_exporter_pacakges_variant }}"
     state: "{{ vars['ovirt_exporter_package_state'] | default(omit) }}"
     update_cache: "yes"
   when:
     - "hostvars[inventory_hostname]['ansible_os_family'] == 'Debian'"
-- name: "ovirt_exporter | Install the required packages in ArchLinux derivatives"
+- name: "ovirt_exporter | Install the required packages in ArchLinux
+    derivatives"
   community.general.pacman:
-    name: "{{ hostvars[inventory_hostname]['ovirt_exporter_package'] }}"
+    name: "{{ ovirt_exporter_pacakges_variant }}"
     state: "{{ vars['ovirt_exporter_package_state'] | default(omit) }}"
     update_cache: "yes"
   when:
