--- a/tasks/pre_requisite.yml
+++ b/tasks/pre_requisite.yml
@@ -1,37 +1,89 @@
 ---
 - name: "ovirt_exporter | Assert that system manager is systemd"
-  assert:
+  ansible.builtin.assert:
     that:
       - "hostvars[inventory_hostname]['ansible_service_mgr'] == 'systemd'"
-    msg: "System manager is not systemd"
+    fail_msg: "System manager is not systemd"
     quiet: "true"
 - name: "ovirt_exporter | Add the OS specific varibles"
   ansible.builtin.include_vars:
     file: "{{ hostvars[inventory_hostname]['ansible_os_family'] + '.yml' }}"
 - name: "ovirt_exporter | Set facts about ovirt_exporter role"
   ansible.builtin.set_fact:
-    ovirt_exporter_version: "{{ hostvars[inventory_hostname]['ovirt_exporter'] |
+    ovirt_exporter_version:
+      "{{ hostvars[inventory_hostname]['ovirt_exporter'] |
       community.general.json_query('[].version | [0]') | default(omit) }}"
-    ovirt_exporter_settings: "{{ hostvars[inventory_hostname]['ovirt_exporter'] |
-      community.general.json_query('[].settings[]') | default(omit) }}"
+    ovirt_exporter_settings:
+      "{{ hostvars[inventory_hostname]['ovirt_exporter'] |
+      community.general.json_query('[].settings | [0]') | default(omit) }}"
+    ovirt_exporter_package_state:
+      "{{ hostvars[inventory_hostname]['ovirt_exporter'] |
+      community.general.json_query('[].package_state | [0]') | default(omit) }}"
+- name: "ovirt_exporter | Assert that ovirt_exporter package state in
+    valid value"
+  ansible.builtin.assert:
+    that:
+      - "vars['ovirt_exporter_package_state'] in ['present', 'latest']"
+    fail_msg: "{{ 'package_state must be in `present` or `latest`,
+      current is: ' + vars['ovirt_exporter_package_state'] }}"
+    quiet: "true"
+  when:
+    - "vars['ovirt_exporter_package_state'] is defined"
+    - "vars['ovirt_exporter_package_state'] != []"
+    - "vars['ovirt_exporter_package_state'] != ''"
+- name: "ovirt_exporter | Set package state to 'present' cause value is not
+    defined"
+  ansible.builtin.set_fact:
+    ovirt_exporter_package_state: "present"
+  when:
+    - "vars['ovirt_exporter_package_state'] is defined"
+    - "vars['ovirt_exporter_package_state'] == ''"
 - name: "ovirt_exporter | Get last release version from Github"
   community.general.github_release:
     user: "czerwonk"
     repo: "ovirt_exporter"
     action: "latest_release"
-  run_once: "true"
+  run_once: true
   register: "ovirt_exporter_version_tag"
   delegate_to: "localhost"
   when:
     - "vars['ovirt_exporter_version'] is defined"
     - "vars['ovirt_exporter_version'] == 'latest'"
+    - "hostvars[inventory_hostname]['ovirt_exporter'] is defined"
+    - "hostvars[inventory_hostname]['ovirt_exporter'] != ''"
+    - "hostvars[inventory_hostname]['ovirt_exporter'] |
+       community.general.json_query(vars['ovirt_exporter_install_package'])
+       is defined"
+    - "hostvars[inventory_hostname]['ovirt_exporter'] |
+       community.general.json_query(vars['ovirt_exporter_install_package'])
+       == 'false'"
+  vars:
+    ovirt_exporter_install_package: "[] |
+      map(&install_package || 'false', @) | [0]"
 - name: "ovirt_exporter | Set facts about ovirt_exporter role"
   ansible.builtin.set_fact:
-    ovirt_exporter_version: "{{ vars['ovirt_exporter_version_tag']['tag'] }}"
+    ovirt_exporter_package_state: "present"
+    ovirt_exporter_version:
+      "{{ vars['ovirt_exporter_version_tag']['tag'][1:] }}"
+  when:
+    - "vars['ovirt_exporter_version_tag'] is defined"
+    - "not vars['ovirt_exporter_version_tag']['skipped']"
 - name: "ovirt_exporter | Create ovirt_exporter catalog"
   ansible.builtin.file:
-    path: "{{ vars['ovirt_exporter_dest'] }}"
+    path: "{{ hostvars[inventory_hostname]['ovirt_exporter_dest'] }}"
     state: "directory"
     owner: "root"
     group: "root"
     mode: "0755"
+  when:
+    - "hostvars[inventory_hostname]['ovirt_exporter'] is defined"
+    - "hostvars[inventory_hostname]['ovirt_exporter'] != ''"
+    - "hostvars[inventory_hostname]['ovirt_exporter'] |
+       community.general.json_query(vars['ovirt_exporter_install_package'])
+       is defined"
+    - "hostvars[inventory_hostname]['ovirt_exporter'] |
+       community.general.json_query(vars['ovirt_exporter_install_package'])
+       == 'false'"
+  vars:
+    ovirt_exporter_install_package: "[] |
+      map(&install_package || 'false', @) | [0]"
